<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context="com.project.you_first.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rawName"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_alignTop="@+id/profileImage"
        android:layout_alignStart="@+id/Surname" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Surname"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/profileImage"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/profileImage"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/profileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chat"
        android:id="@+id/ChatBtn"
        android:background="@drawable/mybutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MatchGame"
        android:id="@+id/MatchGameBtn"
        android:padding="10dp"
        android:background="@drawable/mybutton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Friends"
        android:id="@+id/FriendsBtn"
        android:background="@drawable/mybutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:nestedScrollingEnabled="false"
        android:onClick="onButtonClick" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="15"
        android:id="@+id/description"
        android:height="200dp"
        android:background="@drawable/textstyle"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/DescriptionLbl"
        android:layout_alignStart="@+id/DescriptionLbl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DescriptionLbl"
        android:id="@+id/DescriptionLbl"
        android:textSize="20sp"
        android:layout_below="@+id/profileImage"
        android:layout_toStartOf="@+id/MatchGameBtn"
        android:layout_marginTop="15dp" />


</RelativeLayout>
